--- a/index.html
+++ b/index.html
@@ -124,47 +124,47 @@
                         <div class="tm-img-grid">
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp1.png" class="tm-gallery-img-link">
-                                    <img src="img/cp1.png" alt="Image" class="img-fluid tm-gallery-img lazy"> <!-- 300x200 -->
+                                    <img src="img/cp1.png" data-original="img/cp1.png" alt="Image" class="img-fluid tm-gallery-img lazy"> <!-- 300x200 -->
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp2.png" class="tm-gallery-img-link">
-                                    <img src="img/cp2.png" alt="Image" class="img-fluid tm-gallery-img lazy">  
+                                    <img src="img/cp2.png" data-original="img/cp2.png" alt="Image" class="img-fluid tm-gallery-img lazy">  
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp3.png" class="tm-gallery-img-link">
-                                    <img src="img/cp3.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp3.png" data-original="img/cp3.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>                           
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp4.png" class="tm-gallery-img-link">
-                                    <img src="img/cp4.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp4.png" data-original="img/cp4.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp5.png" class="tm-gallery-img-link">
-                                    <img src="img/cp5.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp5.png" data-original="img/cp5.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp6.png" class="tm-gallery-img-link">
-                                    <img src="img/cp6.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp6.png" data-original="img/cp6.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp7.png" class="tm-gallery-img-link">
-                                    <img src="img/cp7.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp7.png" data-original="img/cp7.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp8.png" class="tm-gallery-img-link">
-                                    <img src="img/cp8.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp8.png" data-original="img/cp8.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <a href="img/cp9.png" class="tm-gallery-img-link">
-                                    <img src="img/cp9.png" alt="Image" class="img-fluid tm-gallery-img lazy">
+                                    <img src="img/cp9.png" data-original="img/cp9.png" alt="Image" class="img-fluid tm-gallery-img lazy">
                                 </a>
                             </div>
                         </div>
